Add border box sizing to override content box

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,9 @@ font-family: 'Montserrat', sans-serif;
     border: 0;
 }
 
+html {
+    box-sizing: border-box;
+}
 article, aside, details, figcaption, figure, footer, header, main, nav, section, summary {
     display:block;
 }
