Change color of form text to red

--- a/css/main.css
+++ b/css/main.css
@@ -293,14 +293,13 @@ iframe:nth-of-type(2) {
 }
 
 /* FORM  */
-
 input {
     padding: 1rem 0;
     border: 1px solid #cccccc;
     width: 100%;
     display: block;
     font-family: 'Montserrat', sans-serif;
-    color: #9a9e08;
+    color: #bc1919;
 }
 
 /* SECTION  6.0 ----------------------------- */
