Add button to form

--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,10 @@ summary {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7);
 }
 
+.formbutton {
+    width: 100%;
+}
+
 /* LINK ATTRIBUTES */
 a {
     text-decoration: none;
