--- a/css/main.css
+++ b/css/main.css
@@ -180,9 +180,15 @@ nav ul li a:visited {
 /
 /* GENERAL ELEMENT STYLING ----------------------------- */
 
-h1 {
+header h1 {
     display: none;
     font-family: 'Montserrat', sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.4rem;
 }
 
 h2 {
