--- a/css/main.css
+++ b/css/main.css
@@ -379,7 +379,7 @@ footer img:nth-of-type(4) {
 }
 
 /* CLEAR FIX */
-#footercontainer::after {
+.clearfix::after {
     content: ' ';
     clear: both;
     display: block;
