--- a/css/main.css
+++ b/css/main.css
@@ -448,7 +448,7 @@ footer img:nth-of-type(4) {
     }
 
     /* CLEAR FIX */
-    #sectioncontainer::after {
+    .clearfix::after {
         content: ' ';
         clear: both;
         display: block;
