--- a/css/main.css
+++ b/css/main.css
@@ -469,6 +469,10 @@ footer img:nth-of-type(4) {
         float: left;
     }
 
+    #contactUs figure img {
+        width: 100%;
+    }
+
     /* CLEAR FIX */
     .clearfix::after {
         content: ' ';
