Fix linter errors

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/*TABLE OF CONTENTS
+/* TABLE OF CONTENTS
 1.0 STYLING REMINDERS
 2.0 DOCUMENT SETUP
 3.0 NAVIGATION STYLING
@@ -8,10 +8,11 @@
 6.0 FOOTER STYLING
 7.0 MEDIA QUERIES
 
-/* SECTION  1.0 -----------------------------*/
-/* STYLING REMINDERS -----------------------------*/
-/*
-DOCUMENT COLORS:::
+/* SECTION  1.0 ----------------------------- */
+
+/* STYLING REMINDERS ----------------------------- */
+
+/* DOCUMENT COLORS:::
 Green						9a9e08     9a9e08
 Light Green			cad309    202	211	9
 Red							bc1919    188 25 25
