Fix clearfix for the menu page

--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,13 @@ div {
     margin: auto;
 }
 
+/* CLEAR FIX */
+.clearfix::after {
+    content: ' ';
+    clear: both;
+    display: block;
+}
+
 /* BUTTON STYLING */
 .button {
     display: block;
