--- a/css/main.css
+++ b/css/main.css
@@ -290,6 +290,18 @@ header img:nth-of-type(2) {
 /* SECTION  5.0 ----------------------------- */
 
 /* SECTIONS STYLING ----------------------------- */
+
+/* MENU */
+.menuContainer {
+    background-color: rgb(103, 107, 107);
+    color: #9a9e08;
+}
+
+.menuContainer article {
+    background-color: rgb(103, 107, 107);
+    color: rgb(221, 230, 219);
+}
+
 #sectioncontainer {
     margin: auto;
     padding-top: 15px;
@@ -307,6 +319,9 @@ section article img {
     margin: auto;
 }
 
+
+
+/* MAP */
 iframe {
     -webkit-filter: grayscale(70%);
     filter: grayscale(70%);
@@ -319,8 +334,6 @@ iframe:nth-of-type(1) {
 iframe:nth-of-type(2) {
     display: none;
 }
-
-contact
 
 
 /* FORM  */
