--- a/css/main.css
+++ b/css/main.css
@@ -469,13 +469,18 @@ footer img:nth-of-type(4) {
         width: 64%;
     }
 }
-@media (min-width: 600px) {
+@media (min-width: 615px) {
     footer p {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
+    }
+    nav ul li {
+        display: inline;
+        padding: 5px 4%;
     }
 }
-@media (min-width: 800px) {
-    ul li {
+/*
+@media (max-width: 615px) {
+    nav ul li {
         display: inline;
         padding: 5px 4%;
     }
@@ -485,7 +490,7 @@ footer img:nth-of-type(4) {
     section img {
         max-width: 190px;
     }
-}
+}*/
 @media (min-width: 900px) {
     iframe:nth-of-type(1) {
         display: none;
