Add p line height.

--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,7 @@ time {
     font-family: 'Montserrat', sans-serif;
     padding: 10px;
     font-size: 0.9rem;
+    line-height: 1.3rem;
 }
 
 /* SECTION  4.0 ----------------------------- *
