Add dark grey to color comments in CSS

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,8 @@ Green						9a9e08     9a9e08
 Light Green			cad309    202	211	9
 Red							bc1919    188 25 25
 Grey						dbdbda    219 219 218
+Dark Grey
+#262727
 
 FONTS:::
 Menu
