--- a/css/main.css
+++ b/css/main.css
@@ -479,6 +479,11 @@ footer img:nth-of-type(4) {
         margin: 10px 1%;
         float: left;
     }
+    .about-container {
+        width: 80%;
+        float: none;
+        margin: auto;
+    }
     .menuContainer article {
         width: calc(100% / 2 - 2%);
         margin: 10px 1%;
@@ -507,6 +512,9 @@ footer img:nth-of-type(4) {
     }
     iframe:nth-of-type(2) {
         display: block;
+    }
+    .about-container {
+        width: 60%;
     }
 
     #contactUs figure img {
