--- a/css/main.css
+++ b/css/main.css
@@ -279,8 +279,14 @@ nav ul li a:hover {
     color: #bc1919;
 }
 
-header img:nth-of-type(1),
-header img:nth-of-type(2) {
+.test {
+    display: block;
+    margin: auto;
+    width: 100%;
+    max-width: 320px;
+}
+
+.headerImage {
     display: block;
     margin: auto;
     width: 100%;
