--- a/css/main.css
+++ b/css/main.css
@@ -569,7 +569,7 @@ footer img:nth-of-type(4) {
         position: absolute;
         width: 10%;
         max-width: 200px;
-        padding: 2% 20%;
+        margin: 2% 20%;
     }
     footer img:nth-of-type(3) {
         display: block;
@@ -577,6 +577,6 @@ footer img:nth-of-type(4) {
         width: 10%;
         max-width: 200px;
         float: right;
-        padding: 2% 60%;
+        margin: 2% 60%;
     }
 }
