--- a/css/main.css
+++ b/css/main.css
@@ -447,8 +447,6 @@ footer img:nth-of-type(4) {
     transform: rotate(90deg);
 }
 
-
-
 /* WIGGLER https://harrybailey.com/2011/09/css3-element-wiggle-with-keyframes/ */
 
 /* safari and chrome */
@@ -584,3 +582,7 @@ footer img:nth-of-type(4) {
         margin: 2% 60%;
     }
 }
+@media (min-width: 1600px) {
+    .contactUs h2, .reservations h2 {
+        font-size: 1.5vw;
+    }
